[gd_scene load_steps=5 format=2]

[ext_resource path="res://Level/Target.gd" type="Script" id=1]
[ext_resource path="res://assets/Crosshair.png" type="Texture" id=2]
[ext_resource path="res://sfx/Gunshot_Rifle.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[node name="Target" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.257664, 0.403967 )
shape = SubResource( 1 )
disabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 12.0

[node name="Fire_Rate" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Target_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Target_body_entered"]
